Fix shield text spacing issue on landing

--- a/styles/landing.scss
+++ b/styles/landing.scss
@@ -36,7 +36,7 @@
         text-align: center;
       }
       #shield + span {
-        padding-top: 15%;
+        padding-top: 10%;
       }
       #idea + span {
         padding: 20%;
